@@ -48,6 +48,7 @@ export(callNextMethod)
 export(canCoerce)
 export(checkSlotAssignment)
 export(classMetaName)
+export(classLabel)
 export(classesToAM)
 export(coerce)
 export("coerce<-")
